# temporal-task

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
after/: activities.py  app.css  app.py  run_worker.py  shared.py  start_workflow.py  test_workflow.py  workflows.py
before/: create_pr_monolith.py
dynamicconfig/: development-sql.yaml
